# A2UI-Vue-App

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme-zh.md  tailwind.config.js  tsconfig.json  vite.config.ts
server/: .env.example  pyproject.toml
server/app/: main.py
server/app/models/: schemas.py
server/app/routes/: chat.py
server/app/services/: generator.py
src/: App.vue
src/components/: ChatInterface.vue
src/components/renderer/: ComponentRenderer.vue
src/components/ui/: A2Accordion.vue  A2Alert.vue  A2Avatar.vue  A2Badge.vue  A2Chart.vue  A2Figure.vue  A2Markdown.vue  A2MetricCard.vue  A2Price.vue  A2Progress.vue  A2Quote.vue  A2Rating.vue  A2Stat.vue  A2Steps.vue  A2Table.vue  A2TagList.vue  A2Timeline.vue
src/composables/: a2uiSchema.ts  useA2UI.ts
src/core/: A2UIEngine.ts
src/stores/: a2ui.ts
src/styles/: index.css
src/types/: index.ts
